--- a/cucumber-java.conf
+++ b/cucumber-java.conf
@@ -3,7 +3,7 @@ framework = 'java'
 
 features_output_directory = './src/test/java/com/coffeemachine/features'
 output_directory = './src/test/java/com/coffeemachine'
-
+token = ${{ secrets.YOUR_SECRET_TOKEN }}  # Use an environment variable
 with_folders = true
 package = 'com.coffeemachine'
 push_format = cucumber-json
