--- a/java-ci.yml
+++ b/java-ci.yml
@@ -3,7 +3,7 @@ name: Java CI/CD
 on:
   push:
     branches:
-      - main  # Adjust the branch as needed
+      - master  # Adjust the branch as needed
 
 jobs:
   build:
