--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 11  # Adjust the Java version as needed
+          distribution: 'adopt'
 
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
