--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version> <!-- Updated version -->
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -24,7 +24,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version> <!-- Updated version -->
+                <version>3.0.0-M5</version>
             </plugin>
         </plugins>
     </build>
@@ -32,19 +32,19 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version> <!-- Updated version -->
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>6.10.4</version> <!-- Updated version -->
+            <version>7.1.0</version> <!-- Updated Cucumber version -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>6.10.4</version> <!-- Updated version -->
+            <version>7.1.0</version> <!-- Updated Cucumber version -->
             <scope>test</scope>
         </dependency>
     </dependencies>
